# app/src/Enum/AddressType.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Enum;
+
+enum AddressType: string
+{
+    case Billing = 'billing';
+    case Shipping = 'shipping';
+}
